--- a/architect.css
+++ b/architect.css
@@ -4,3 +4,40 @@
   font-weight: <400>;
   font-style: normal;
 }
+/* shared styles */
+.display-flex{
+    display: flex;
+}
+.text-dark2{
+    color: #424242;
+}
+.text-dark3{
+    color: #727272;
+}
+.bg-color{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+/* header styles */
+
+/* navbar styles */
+.nav-links{
+    list-style: none;
+    }
+.nav-items{
+    margin-right: 50px;
+}
+.link{
+    text-decoration: none;
+}
+.nav-itemh{
+    justify-content: space-between;
+    align-items: center;
+}
+.brand{
+    font-weight: 700;
+    font-size: 3rem;
+}
+.nav-itemh, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
