--- a/architect.css
+++ b/architect.css
@@ -85,6 +85,18 @@ main > section{
     max-width: 576px;
     margin-left: 100px;
 }
+.feature-title{
+    text-align: left;
+}
+.feature-description{
+    color: rgb(114, 114, 114);
+font-family: Work Sans;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: left;
+}
 #p1{
     color: #727272;
     font-size: 3rem;
@@ -100,9 +112,44 @@ main > section{
     font-size: 3rem;
     font-weight: 700;
 }
+/* Love and Enjoy */
+.love-title{
+color: rgb(19, 19, 19);
+font-family: Work Sans;
+font-size: 45px;
+font-weight: 700;
+line-height: 53px;
+letter-spacing: 0%;
+text-align: left;
+}
+.love-description{
+color: rgb(114, 114, 114);
+font-family: Work Sans;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: left;
+}
 /* Media responsive styles */
 @media screen and (max-width: 576px) {
-.nav-itemh, .nav-links{
+.nav-itemh, 
+.nav-links,
+.teams
+{
     flex-direction: column;
 }    
+.team-image-container{
+    grid-template-columns: repeat(1, 1fr);
+}
+.features{
+margin: 20px auto;
+}
+
+}
+/* medium size device responsive styles */
+@media screen and (min-width: 577px) and (max-width: 992px) {
+    .teams{
+        flex-direction: column;
+    }
 }
